# Super-Web-Scrapper

./: exporter.py  jobs.csv  main.py  pyproject.toml  remote.py  scrapper.py  so.py  wework.py
static/css/: homestyle.css  report.css
templates/: details.html  home.html  report.html
