[tool.poetry]
name = "super-web-scrapper"
version = "0.1.0"
description = ""
authors = ["mingubeep <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
requests2 = "^2.16.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
